[fix] Css z-index value (#1182)

--- a/public/agileui.css
+++ b/public/agileui.css
@@ -103,7 +103,7 @@ footer.atk-footer .ui.segment {
   margin: 0;
 }
 .ui.left.sidebar {
-  z-index: 99;
+  z-index: 201;
 }
 .atk-right-panel {
   -webkit-transition: box-shadow 0.2s, right 0.2s;
@@ -119,7 +119,7 @@ footer.atk-footer .ui.segment {
   overflow-y: auto;
   position: fixed;
   width: 40%;
-  z-index: 1000;
+  z-index: 201;
 }
 .atk-right-panel.atk-visible {
   box-shadow: 0px 0 5px rgba(27, 28, 29, 0.2);
@@ -210,7 +210,7 @@ i.atk-panel-warning.atk-visible {
   position: fixed;
   top: 48px;
   width: 100%;
-  z-index: 102;
+  z-index: 101;
 }
 .atk-overlay.pushable .pusher:after {
   height: 100%;
